chart/templates/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: shirts4mike
spec:
  type: NodePort
  selector:
    app: shirts4mike
    tier: frontend
  ports:
  - port: 80
