chart/templates/network-policy.yaml
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shirts4mike
spec:
  podSelector:
    matchLabels:
      app: shirts4mike
      tier: frontend
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: 80
